tests_before.txt
   Compiling proc-macro2 v1.0.95
   Compiling memchr v2.7.5
   Compiling libc v0.2.174
   Compiling serde v1.0.219
   Compiling getrandom v0.3.3
   Compiling thiserror v2.0.12
   Compiling regex-syntax v0.8.5
   Compiling indexmap v2.10.0
   Compiling smallvec v1.15.1
   Compiling aho-corasick v1.1.3
   Compiling petgraph v0.8.2
   Compiling quote v1.0.40
   Compiling syn v2.0.104
   Compiling regex-automata v0.4.9
   Compiling uuid v1.18.0
   Compiling regex v1.11.1
   Compiling wasm-bindgen-backend v0.2.100
   Compiling wasm-bindgen-macro-support v0.2.100
   Compiling serde_derive v1.0.219
   Compiling thiserror-impl v2.0.12
   Compiling wasm-bindgen-macro v0.2.100
   Compiling wasm-bindgen v0.2.100
   Compiling js-sys v0.3.77
   Compiling web-sys v0.3.77
   Compiling gridcore-core v0.1.0 (/Users/vinay/v/code/gridcore/worktrees/visual-select-grid/gridcore-rs/gridcore-core)
   Compiling serde_json v1.0.142
   Compiling wasm-logger v0.2.0
   Compiling gridcore-controller v0.1.0 (/Users/vinay/v/code/gridcore/worktrees/visual-select-grid/gridcore-rs/gridcore-controller)
error[E0432]: unresolved import `gridcore_controller::controller::events::KeyboardLocation`
 --> gridcore-controller/tests/visual_mode_tests.rs:2:62
  |
2 | use gridcore_controller::controller::events::{KeyboardEvent, KeyboardLocation};
  |                                                              ^^^^^^^^^^^^^^^^ no `KeyboardLocation` in `controller::events`

warning: unused imports: `Action` and `Selection`
 --> gridcore-controller/tests/visual_mode_tests.rs:3:34
  |
3 | use gridcore_controller::state::{Action, UIState, NavigationModal, VisualMode, Selection, SelectionType};
  |                                  ^^^^^^                                        ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `gridcore_core::types::CellAddress`
 --> gridcore-controller/tests/visual_mode_tests.rs:4:5
  |
4 | use gridcore_core::types::CellAddress;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0560]: struct `KeyboardEvent` has no field named `location`
  --> gridcore-controller/tests/visual_mode_tests.rs:10:9
   |
10 |         location: KeyboardLocation::Standard,
   |         ^^^^^^^^ `KeyboardEvent` does not have this field
   |
   = note: all struct fields are already assigned

error[E0560]: struct `KeyboardEvent` has no field named `repeat`
  --> gridcore-controller/tests/visual_mode_tests.rs:15:9
   |
15 |         repeat: false,
   |         ^^^^^^ `KeyboardEvent` does not have this field
   |
   = note: all struct fields are already assigned

error[E0308]: mismatched types
  --> gridcore-controller/tests/visual_mode_tests.rs:53:16
   |
53 |         if let Some(sel) = selection {
   |                ^^^^^^^^^   --------- this expression has type `&Selection`
   |                |
   |                expected `Selection`, found `Option<_>`
   |
   = note: expected struct `Selection`
                found enum `Option<_>`

error[E0560]: struct `KeyboardEvent` has no field named `location`
  --> gridcore-controller/tests/visual_mode_tests.rs:86:9
   |
86 |         location: KeyboardLocation::Standard,
   |         ^^^^^^^^ `KeyboardEvent` does not have this field
   |
   = note: all struct fields are already assigned

error[E0560]: struct `KeyboardEvent` has no field named `repeat`
  --> gridcore-controller/tests/visual_mode_tests.rs:91:9
   |
91 |         repeat: false,
   |         ^^^^^^ `KeyboardEvent` does not have this field
   |
   = note: all struct fields are already assigned

error[E0308]: mismatched types
   --> gridcore-controller/tests/visual_mode_tests.rs:121:16
    |
121 |         if let Some(sel) = selection {
    |                ^^^^^^^^^   --------- this expression has type `&Selection`
    |                |
    |                expected `Selection`, found `Option<_>`
    |
    = note: expected struct `Selection`
                 found enum `Option<_>`

error[E0560]: struct `KeyboardEvent` has no field named `location`
   --> gridcore-controller/tests/visual_mode_tests.rs:147:9
    |
147 |         location: KeyboardLocation::Standard,
    |         ^^^^^^^^ `KeyboardEvent` does not have this field
    |
    = note: all struct fields are already assigned

error[E0560]: struct `KeyboardEvent` has no field named `repeat`
   --> gridcore-controller/tests/visual_mode_tests.rs:152:9
    |
152 |         repeat: false,
    |         ^^^^^^ `KeyboardEvent` does not have this field
    |
    = note: all struct fields are already assigned

error[E0277]: can't compare `&gridcore_controller::state::VisualMode` with `gridcore_controller::state::VisualMode`
   --> gridcore-controller/tests/visual_mode_tests.rs:158:9
    |
158 |         assert_eq!(mode, VisualMode::Line, "Should be in visual line mode");
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&gridcore_controller::state::VisualMode == gridcore_controller::state::VisualMode`
    |
    = help: the trait `PartialEq<gridcore_controller::state::VisualMode>` is not implemented for `&gridcore_controller::state::VisualMode`
    = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider dereferencing here
   --> /Users/vinay/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/macros/mod.rs:59:22
    |
59  |                 if !(**left_val == *right_val) {
    |                      +

error[E0308]: mismatched types
   --> gridcore-controller/tests/visual_mode_tests.rs:169:16
    |
169 |         if let Some(sel) = selection {
    |                ^^^^^^^^^   --------- this expression has type `&Selection`
    |                |
    |                expected `Selection`, found `Option<_>`
    |
    = note: expected struct `Selection`
                 found enum `Option<_>`

error[E0599]: no method named `get_ui_state` found for struct `SpreadsheetController` in the current scope
   --> gridcore-controller/tests/visual_mode_tests.rs:193:31
    |
193 |     let ui_state = controller.get_ui_state();
    |                               ^^^^^^^^^^^^ method not found in `SpreadsheetController`

Some errors have detailed explanations: E0277, E0308, E0432, E0560, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `gridcore-controller` (test "visual_mode_tests") generated 2 warnings
error: could not compile `gridcore-controller` (test "visual_mode_tests") due to 12 previous errors; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
